<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="396dp"
        android:layout_height="248dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="386dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="07dp"
                android:layout_marginRight="130dp"
                android:gravity="left"
                android:text="@string/schedule_date"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/scheduleDate"
                android:layout_width="230dp"
                android:layout_height="55dp"
                android:layout_marginTop="-55dp"

                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="130dp"
                android:gravity="left"
                android:text="@string/hub_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/hubName"
                android:layout_width="230dp"
                android:layout_height="55dp"

                android:layout_marginLeft="-70dp"
                android:layout_marginTop="-55dp"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="180dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="130dp"
                android:gravity="left"
                android:text="@string/warehouse_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/warehouseName"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-55dp"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:layout_width="110dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="130dp"
                android:gravity="left"
                android:text="@string/audit_type"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/auditType"
                android:layout_width="230dp"
                android:layout_height="55dp"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="-55dp"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>